--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^7.5.0",
     "react-tag-input-component": "^2.0.2",
     "recharts": "^2.15.2",
