--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "^1.1.1",
     "countries-cities": "^0.0.11",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
