--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.0.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "react-tag-input-component": "^2.0.2",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
