--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,17 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Serve static files directly
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 
+  # Optional: Handle common error pages gracefully
   error_page 404 /index.html;
+
+  # Optional: Cache static assets (you can fine-tune this)
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    expires 1y;
+    add_header Cache-Control "public";
+  }
 }
