--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-select": "^5.10.1",
     "react-tag-input-component": "^2.0.2",
     "recharts": "^2.15.2",
+    "serve": "^14.2.4",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.1",
@@ -54,7 +55,7 @@
     "@eslint/js": "^9.21.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.14.0",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
